fix(elements): fix z-indexing on nve-range styling

--- a/projects/elements/src/range/range.global.css
+++ b/projects/elements/src/range/range.global.css
@@ -11,7 +11,7 @@ nve-range input[type='range']::-webkit-slider-thumb {
 
 nve-range input[type='range']::-webkit-slider-runnable-track,
 nve-range input[type='range']::-webkit-slider-runnable-track {
-  background: var(--nve-sys-interaction-background);
+  background: transparent;
   height: var(--track-height);
   border-radius: var(--nve-ref-border-radius-lg);
   align-self: center;
